@@ -1,6 +1,7 @@
 ggplot2 0.8  (2008-XX)
 ----------------------------------------
 
+* coord_map gains experimental axis labels
 * scale_area works once more
 * mapping aesthetics to functions of stat output now works in a much wider variety of cases
 * scale_x_log10, scale_y_sqrt etc now correctly transform output from statistics as well as raw data
